--- a/R/R101/Regular_Expressions.Rmd
+++ b/R/R101/Regular_Expressions.Rmd
@@ -41,7 +41,8 @@ knitr::opts_chunk$set(echo = TRUE)
 # "{ }"
 # "[ ]" - bracket used to build a character class, any charcter class will be enclosed with []
 # "|" - interpreted as an OR when building extended regular expressions
-# "\" 
+# "\" - interpreted as an escape character, true for the language
+#       \s is a regex used for whitespace
 # "^" : instruction to match empty i.e "" (0 character string) string at begininig of line, 
 #       except in CHARCTER CLASS (SEE BELOW)
 #       where it means to match for any character except the one following ^
