--- a/R/R101/Adv_DataWrangling.Rmd
+++ b/R/R101/Adv_DataWrangling.Rmd
@@ -355,6 +355,7 @@ apply(X = mat,
       trim = 0.4) # parameter that function trim takes
                   # to remove extreme observations
 ```
+
 ```{r}
 # DATA WRANGLING EXAMPLE
 # Get a combined score, assign A, B,C,D,E grades at 20%ile, sort by student first names
@@ -364,41 +365,51 @@ science <- c(95,99,80,82,75,85,80,95,89,86)
 english <-c(25,22,18,15,20,28,15,30,27,18)
 df<- data.frame(student, math, science, english, stringsAsFactors = FALSE)
 
-df1 <- df
-df1$student = NULL
-str(df1)
+# GET A DATA FRAME WITH SCALED COLUMNS
+vec.scale <- c(max(df$math)/100, max(df$science)/100, max(df$english)/100)
+df1 <- as.data.frame(scale(x = df[,c("math", "science", "english")],center = c(0,0,0), 
+                           scale = vec.scale ), row.names = FALSE)
+df1 <- round(df1,2)
+colnames(df1) <- paste("scaled",colnames(df1),sep=".")
 
-vec.scale <- c(max(df1$math)/100, max(df1$science)/100, max(df1$english)/100)
-df2 <- as.data.frame(scale(x = df1,center = c(0,0,0), scale = vec.scale ),
-                     row.names = FALSE)
-colnames(df2) <- paste("scaled",colnames(df2),sep=".")
+df2 <- cbind(df,df1)
+df2$combined.score <- df2$scaled.math + df2$scaled.science +df2$scaled.english
+qtile <- quantile(x = df2$combined.score, probs = c(0, 0.2,0.4,0.6,0.8,1))
 
-df3 <- cbind(df,df2)
-df3$combined.score <- df3$scaled.math + df3$scaled.science +df3$scaled.english
-qtile <- quantile(x = df3$combined.score, probs = c(0, 0.2,0.4,0.6,0.8,1))
-df3$grade <- cut(x = df3$combined.score,
-    breaks = qtile,
-    labels = c("E","D","C","B","A"),right = FALSE,include.lowest = TRUE)
-df3
+# USE CUT TO DERIVE A FACTOR VARIABLE FROM A CONTINUOUS VARIABLE (SCORE)
+df2$grade <- cut(x = df2$combined.score,
+    breaks = qtile, # ALL THE POINTS FORMING THE INTERVALS NEED TO BE SPECIFIED IN CUT
+    labels = c("E","D","C","B","A"),
+    right = FALSE, # ENSURES LEFT INTERVAL IS CLOSED AND RIGHT IS OPEN
+    include.lowest = TRUE) # ENSURES THE INTERVAL ONHIGHEST QUANTILE VALUE IS CLOSED 
+df2
 
-split.names <- strsplit(x = df3$student,
+# SPLIT FIRST AND LAST NAMES FROM STRING
+# strsplit can operate on a vector, but returns a list
+split.names <- strsplit(x = df2$student,
                         split = " ", 
                         fixed = TRUE)
-first.name <- NULL
-second.name <- NULL
-for (i in 1:dim(df3)[1]){
-  temp.fn <- split.names[[i]][1]
-  temp.sn <- split.names[[i]][2]
-  first.name <- c(first.name,temp.fn )
-  second.name <- c(second.name,temp.sn )
-}
+# EXTRACT VECTORS OF FIRST NAME & SECOND NAME FROM THE LIST
 
-df3$first.name <- first.name
-df3$second.name <- second.name
+# first.name <- NULL
+# second.name <- NULL
+# for (i in 1:dim(df2)[1]){
+#   temp.fn <- split.names[[i]][1]
+#   temp.sn <- split.names[[i]][2]
+#   first.name <- c(first.name,temp.fn )
+#   second.name <- c(second.name,temp.sn )
+# }
+# df2$first.name <- first.name
+# df2$second.name <- second.name
 
-df4 <- df3[order(df3$first.name,df3$second.name,decreasing = FALSE),]
-df4
+# A BETTER METHOD
+first.name <- sapply(X = split.names, FUN = "[", 1 ) # Use getElement or "["" function
+second.name <- sapply(X = split.names, FUN = getElement, name = 2 )
+df2$first.name <- first.name
+df2$second.name <- second.name
 
+df3 <- df2[order(df2$first.name,df2$second.name,decreasing = FALSE),]
+df3
 
 ```
 
